update workspace